--- a/index.html
+++ b/index.html
@@ -1,49 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Vue Dev Exercise</title>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
-</head>
-<body>
-<div id="app">
-    <div class="w-full h-screen flex items-center justify-center">
-        <div class="grid gap-4 grid-cols-3">
-            <div v-for="(value,key) in values" 
-                 @click="play(key)"
-                 class="border w-48 h-48 flex items-center justify-center text-4xl hover:bg-gray-100 cursor-pointer">
-                {{ value }}
-            </div>
+    <link
+      href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css"
+      rel="stylesheet"
+    />
+  </head>
+
+  <body class="overflow-hidden">
+    <div id="app">
+      <div class="w-full h-screen flex flex-col items-center justify-center">
+        <div class="my-3">
+          <button
+            @click="resetGame"
+            class="bg-red-500 hover:bg-red-600 text-white font-bold rounded-full p-2"
+          >
+            Reset Game
+          </button>
         </div>
+        <p>El turno es de :{{current}}</p>
+        <div class="grid gap-3 grid-cols-3">
+          <div
+            v-for="(value,key) in values"
+            @click="play(key)"
+            class="border-2 border-black w-40 h-40 flex items-center justify-center text-4xl hover:bg-gray-100 cursor-pointer"
+          >
+            {{ value }}
+          </div>
+        </div>
+      </div>
     </div>
-</div>
-<script>
-    var app = new Vue({
-        el: '#app',
+
+    <script>
+      var app = new Vue({
+        el: "#app",
         data: () => ({
-            values: {
-                1: '',
-                2: '',
-                3: '',
-                4: '',
-                5: '',
-                6: '',
-                7: '',
-                8: '',
-                9: '',
-            },
-            current: 'X'
+          values: {
+            0: "",
+            1: "",
+            2: "",
+            3: "",
+            4: "",
+            5: "",
+            6: "",
+            7: "",
+            8: "",
+          },
+          current: "X",
+          winningLines: [
+            [0, 1, 2],
+            [3, 4, 5],
+            [6, 7, 8],
+            [0, 3, 6],
+            [1, 4, 7],
+            [2, 5, 8],
+            [0, 4, 8],
+            [2, 4, 6],
+          ],
         }),
-        methods:{
-            play(key){
-                if(! this.values[key]) {
-                    this.values[key] = this.current
-                    this.current  = (this.current === 'X' ? 'O' : 'X')
-                }
+        methods: {
+          play(key) {
+            if (!this.values[key]) {
+              this.values[key] = this.current;
+              this.current = this.current === "X" ? "O" : "X";
             }
-        }
-    })
-</script>
-</body>
+            this.calculateWinner();
+          },
+          resetGame() {
+            for (key in this.values) {
+              this.values[key] = "";
+            }
+            this.current = "X";
+          },
+          calculateWinner() {
+            for (let i = 0; i < 8; i++) {
+              const values = this.values;
+              const [square1, square2, square3] = this.winningLines[i];
+
+              if (
+                values[square1] &&
+                values[square1] === values[square2] &&
+                values[square1] === values[square3]
+              ) {
+                console.log(values[square1], "Winner");
+              }
+            }
+          },
+        },
+      });
+    </script>
+  </body>
 </html>
