--- a/index.html
+++ b/index.html
@@ -8,27 +8,95 @@
       href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
+    />
   </head>
 
-  <body class="overflow-hidden">
+  <body class="overflow-hidden bg-gray-200">
     <div id="app">
       <div class="w-full h-screen flex flex-col items-center justify-center">
-        <div class="my-3">
+        <div class="mb-3 flex justify-around bg-gray-300 p-3 shadow-md">
           <button
             @click="resetGame"
-            class="bg-red-500 hover:bg-red-600 text-white font-bold rounded-full p-2"
+            class="bg-red-500 hover:bg-red-600 text-white font-bold rounded px-3 py-2 shadow-md"
           >
             Reset Game
           </button>
+
+          <button
+            @click="resetGame"
+            class="bg-blue-500 hover:bg-blue-600 text-white font-bold rounded px-3 py-2 mx-5"
+            title="Let the Robot to Take the turn"
+          >
+            <i class="fa fa-forward"></i>
+          </button>
+
+          <button
+            @click="resetGame"
+            class="bg-blue-500 hover:bg-blue-600 text-white font-bold rounded px-3 py-2"
+            title="Undo move"
+          >
+            <i class="fa fa-undo"></i>
+          </button>
         </div>
-        <p>El turno es de :{{current}}</p>
-        <div class="grid gap-3 grid-cols-3">
+
+        <span class="text-3xl text-gray-700">Turn : {{current}}</span>
+
+        <div class="grid gap-2 grid-cols-3 bg-red-700 shadow-lg">
           <div
             v-for="(value,key) in values"
             @click="play(key)"
-            class="border-2 border-black w-40 h-40 flex items-center justify-center text-4xl hover:bg-gray-100 cursor-pointer"
+            class="bg-gray-100 w-40 h-40 flex items-center justify-center text-4xl hover:bg-gray-200 cursor-pointer"
           >
             {{ value }}
+          </div>
+        </div>
+
+        <div
+          v-if="!isPlaying"
+          class="w-full h-full absolute bg-blue-300 bg-opacity-25 flex justify-center items-center"
+        >
+          <div class="bg-white border py-4 px-3 rounded shadow-2xl text-center">
+            <p class="text-2xl">Select Game mode</p>
+            <button
+              @click="setGameMode(true)"
+              class="bg-blue-500 hover:bg-blue-600 px-2 text-white border-blue-600 border-2 shadow-md text-3xl rounded"
+              title="Human versus Human"
+            >
+              <i class="fa fa-user"></i> VS <i class="fa fa-user"></i>
+            </button>
+            <button
+              @click="setGameMode(false)"
+              class="bg-red-500 hover:bg-red-600 px-2 text-white border-red-600 border-2 shadow-md text-3xl rounded"
+              title="Human versus Robot"
+            >
+              <i class="fa fa-user"></i> VS <i class="fa fa-robot"></i>
+            </button>
+          </div>
+        </div>
+
+        <div
+          v-if="gameIsOver"
+          class="w-full h-full absolute bg-blue-100 bg-opacity-25 flex justify-center items-center"
+        >
+          <div class="bg-white border py-4 px-3 rounded shadow-2xl text-center">
+            <p class="text-2xl">Game over</p>
+            <p class="text-lg">
+              Winner <br />
+              {{winner}}
+            </p>
+            <p class="text-lg">
+              Winner <br />
+              {{winner}}
+            </p>
+            <button
+              @click="resetGame"
+              class="bg-red-500 px-2 text-white border-red-700 border-2 shadow-md text-3xl rounded-full"
+            >
+              <i class="fa fa-undo"></i>
+            </button>
           </div>
         </div>
       </div>
@@ -38,6 +106,10 @@
       var app = new Vue({
         el: "#app",
         data: () => ({
+          isPlaying: false,
+          gameIsOver: false,
+          isVersusHuman: true,
+          winner: "",
           values: {
             0: "",
             1: "",
@@ -62,6 +134,11 @@
           ],
         }),
         methods: {
+          setGameMode(isVersusHuman) {
+            this.isVersusHuman = isVersusHuman;
+            this.isPlaying = true;
+            this.gameIsOver = false;
+          },
           play(key) {
             if (!this.values[key]) {
               this.values[key] = this.current;
@@ -74,6 +151,8 @@
               this.values[key] = "";
             }
             this.current = "X";
+            this.isPlaying = false;
+            this.gameIsOver = false;
           },
           calculateWinner() {
             for (let i = 0; i < 8; i++) {
@@ -85,9 +164,13 @@
                 values[square1] === values[square2] &&
                 values[square1] === values[square3]
               ) {
-                console.log(values[square1], "Winner");
+                this.gameIsOver = true;
+                this.winner = values[square1];
+                return;
               }
             }
+
+            //calculate draw
           },
         },
       });
