--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <body class="overflow-hidden bg-blue-300">
     <div id="app">
-      <div class="w-full h-screen flex flex-col items-center justify-center">
+      <div class="w-full h-screen flex flex-col items-center">
         <!-- GAME ACTIONS -->
         <div
           class="mb-3 flex justify-around bg-gray-400 p-1 mt-2 shadow-md rounded-full"
@@ -59,11 +59,13 @@
         ></span>
 
         <!-- SQUARES -->
-        <div class="grid gap-2 grid-cols-3 bg-red-500 shadow-lg">
+        <div
+          class="w-full md:max-w-3xl grid gap-2 grid-cols-3 bg-red-500 shadow-lg rounded-full"
+        >
           <div
             v-for="(value,key) in values"
             @click="play(key)"
-            class="bg-gray-100 w-40 h-40 flex items-center justify-center text-4xl hover:bg-gray-200 cursor-pointer"
+            class="bg-gray-100 w-full h-40 flex items-center justify-center text-4xl hover:bg-gray-200 cursor-pointer"
           >
             <i
               v-if="value"
