--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <body class="overflow-hidden bg-blue-300">
     <div id="app">
-      <div class="w-full h-screen flex flex-col items-center">
+      <div class="w-full h-1/5 relative flex flex-col items-center">
         <!-- GAME ACTIONS -->
         <div
           class="mb-3 flex justify-around bg-gray-400 p-1 mt-2 shadow-md rounded-full"
@@ -60,12 +60,12 @@
 
         <!-- SQUARES -->
         <div
-          class="w-full md:max-w-3xl grid gap-2 grid-cols-3 bg-red-500 shadow-lg rounded-full"
+          class="w-full max-w-lg grid gap-2 grid-cols-3 bg-red-500 shadow-lg rounded-full"
         >
           <div
             v-for="(value,key) in values"
             @click="play(key)"
-            class="bg-gray-100 w-full h-40 flex items-center justify-center text-4xl hover:bg-gray-200 cursor-pointer"
+            class="bg-gray-100 h-40 flex items-center justify-center text-4xl hover:bg-gray-200 cursor-pointer scale-150"
           >
             <i
               v-if="value"
@@ -79,7 +79,7 @@
 
         <!-- MODAL GAME MODE -->
         <div
-          v-if="gameStarted"
+          v-if="!gameStarted"
           class="w-full h-full absolute bg-blue-300 bg-opacity-25 flex justify-center items-center"
         >
           <div class="bg-white border py-4 px-3 rounded shadow-2xl text-center">
